--- a/requirements1.txt
+++ b/requirements1.txt
@@ -1,14 +1,13 @@
-certifi==2019.3.9
-chardet==3.0.4
 Click==7.0
 Flask==1.0.2
-idna==2.8
 itsdangerous==1.1.0
 Jinja2==2.10.1
 MarkupSafe==1.1.1
+numpy==1.16.2
 Pillow==6.0.0
-requests==2.21.0
+six==1.12.0
 torch==1.0.1
 torchvision==0.2.2.post3
-urllib3==1.24.2
 Werkzeug==0.15.2
+scikit-learn
+requests
