--- a/requirements.txt
+++ b/requirements.txt
@@ -6,9 +6,11 @@ idna==2.8
 itsdangerous==1.1.0
 Jinja2==2.10.1
 MarkupSafe==1.1.1
+numpy==1.16.2
 Pillow==6.0.0
 requests==2.21.0
-torch==1.0.1
+six==1.12.0
+https://download.pytorch.org/whl/cpu/torch-1.0.1.post2-cp36-cp36m-linux_x86_64.whl
 torchvision==0.2.2.post3
 urllib3==1.24.2
 Werkzeug==0.15.2
