--- a/requirements.txt
+++ b/requirements.txt
@@ -14,3 +14,4 @@ https://download.pytorch.org/whl/cpu/torch-1.0.1.post2-cp36-cp36m-linux_x86_64.w
 torchvision==0.2.2.post3
 urllib3==1.24.2
 Werkzeug==0.15.2
+gunicorn
